--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -40,3 +40,4 @@ security:
         - { path: ^/login$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/admin, roles: ROLE_ADMIN }
         - { path: ^/homepage/*, roles: ROLE_USER}
+        - { path: ^/authorize, roles: IS_AUTHENTICATED_REMEMBERED }
