--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -2,14 +2,17 @@ index:
     path: /
     controller: App\Controller\MainRouteController::mainpage
 
+#route to logout page
 app_logout:
     path: /logout
     methods: GET
 
+#route to homepage for logged in users
 app_homepage:
     path: /homepage
     controller: App\Controller\MainRouteController:homepage
 
+#route main page
 app_welcomepage:
     path: /
     controller: App\Controller\MainRouteController:mainpage
