--- a/config/packages/league_oauth2_server.yaml
+++ b/config/packages/league_oauth2_server.yaml
@@ -59,7 +59,7 @@ league_oauth2_server:
 
       # Name of the entity manager that you wish to use for managing clients and tokens.
       entity_manager:       default
-    in_memory:            ~
+   # in_memory:            ~
 
   # Set a custom prefix that replaces the default 'ROLE_OAUTH2_' role prefix
   role_prefix:          ROLE_OAUTH2_
