--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,8 @@
         "doctrine/doctrine-bundle": "^2.4",
         "doctrine/doctrine-migrations-bundle": "^3.1",
         "doctrine/orm": "^2.9",
+        "league/oauth2-client": "^2.6",
+        "league/oauth2-github": "^3.0",
         "league/oauth2-server": "^8.3",
         "league/oauth2-server-bundle": "0.1.x-dev",
         "sensio/framework-extra-bundle": "^6.1",
@@ -24,6 +26,7 @@
         "symfony/proxy-manager-bridge": "5.3.*",
         "symfony/runtime": "5.3.*",
         "symfony/security-bundle": "5.3.*",
+        "symfony/serializer": "5.3.*",
         "symfony/translation": "5.3.*",
         "symfony/twig-bundle": "5.3.*",
         "symfony/validator": "5.3.*",
