--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -46,7 +46,7 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: ^/admin, roles: ROLE_ADMIN }
-        - { path: ^/token, roles: ROLE_USER}
+        #- { path: ^/token, roles: ROLE_USER}
         - { path: ^/homepage/*, roles: ROLE_USER}
         - { path: ^/login$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/register$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
