--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "doctrine/doctrine-bundle": "^2.4",
         "doctrine/doctrine-migrations-bundle": "^3.1",
         "doctrine/orm": "^2.9",
+        "friendsofsymfony/rest-bundle": "^3.0",
         "league/oauth2-client": "^2.6",
         "league/oauth2-github": "^3.0",
         "league/oauth2-server": "^8.3",
